# alevor

./: .gitignore  AGENT.md  README.md  TRAINING_GUIDE.md  foundry.toml  pyproject.toml
backend/blockchain/: __init__.py  contracts.py  trader_api.py  vault_api.py  web3_client.py
backend/data_layer/: __init__.py  binance_feed.py  features.py  historical_data.py  market_feed.py  onchain_state.py  slippage.py  utils_time.py
backend/decision/: __init__.py  entry_logic.py  ev_calculator.py  exit_logic.py  regime_logic.py  sizing.py
backend/engine_live/: __init__.py  actions.py  exits.py  main_loop.py  scheduler.py  state.py
backend/llm_layer/: __init__.py  api_adapter.py  oversight_service.py  reporting_service.py  router.py
backend/llm_layer/agents/: explainer_agent.py  (+3 more)
backend/logging_layer/: __init__.py  db.py  metrics.py  pnl_calculator.py  schemas.sql  trade_logger.py
backend/models/: __init__.py  edge_model.py  friction_model.py  regime_model.py  risk_model.py
backend/sandbox/: __init__.py  sim_actions.py  sim_executor.py  sim_feed.py  sim_loop.py  sim_state.py
backend/training/: __init__.py  backtest.py  data_collector.py  evaluate_models.py  prepare_dataset.py  train_edge_model.py  train_friction_model.py  train_regime_model.py  train_risk_model.py
config/: llm.yaml  models.yaml  pairs.yaml  risk.yaml  settings.live.yaml  settings.sandbox.yaml
contracts/src/: ALVToken.sol  LiquidityEngine.sol  Trader.sol  Treasury.sol  Vault.sol
infra/: Dockerfile.backend  docker-compose.yml
infra/scripts/: migrate_db.sh  run_live.sh  run_sandbox.sh
(+7 files in other folders)
